<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>idlab.obelisk</groupId>
    <artifactId>obelisk-parent</artifactId>
    <packaging>pom</packaging>
    <version>22.7.1</version>

    <modules>
        <module>int-dataset-streamer</module>
        <module>int-sink-service</module>
        <module>int-stats-collector</module>
        <module>lib-annotation-processor</module>
        <module>lib-definitions</module>
        <module>lib-mongo-utils</module>
        <module>lib-oblx-client</module>
        <module>lib-pulsar-utils</module>
        <module>lib-service-utils</module>
        <module>lib-test-utils</module>
        <module>monolith</module>
        <module>plugin-accessmanager-basic</module>
        <module>plugin-datastore-clickhouse</module>
        <module>plugin-metastore-mongo</module>
        <module>plugin-monitoring-prometheus</module>
        <module>plugin-ratelimiter-gubernator</module>
        <module>pub-auth-service</module>
        <module>pub-catalog-service</module>
        <module>pub-dcat-service</module>
        <module>pub-export-service</module>
        <module>pub-ingest-service</module>
        <module>pub-issue-service</module>
        <module>pub-monitor-service</module>
        <module>pub-ngsi-service</module>
        <module>pub-query-service</module>
        <module>pub-streaming-service</module>
    </modules>

    <properties>
        <revision>22.07.1</revision>
        <maven.compiler.release>17</maven.compiler.release>
        <kotlin.compiler.jvmTarget>17</kotlin.compiler.jvmTarget>
        <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <kotlin.version>1.6.21</kotlin.version>
        <vertx.version>4.2.5</vertx.version>
        <pulsar.version>2.10.1</pulsar.version>
        <micrometer.version>1.7.1</micrometer.version>
        <logback.level>all</logback.level>
        <logback.level.auth>${logback.level}</logback.level.auth>
        <docker.baseImage>docker.io/library/eclipse-temurin:17</docker.baseImage>
        <docker.registry>gitlab.ilabt.imec.be:4567/obelisk/packages</docker.registry>
    </properties>

    <repositories>
        <repository>
            <id>gitlab-maven</id>
            <url>https://gitlab.ilabt.imec.be/api/v4/projects/3941/packages/maven</url>
        </repository>
        <repository>
            <id>maven-central</id>
            <url>https://repo.maven.apache.org/maven2/</url>
        </repository>
        <repository>
            <id>bintray.kotlin.eap</id>
            <name>Bintray Kotlin EAP Repository</name>
            <url>https://dl.bintray.com/kotlin/kotlin-eap</url>
        </repository>
    </repositories>
    <distributionManagement>
        <repository>
            <id>gitlab-maven</id>
            <url>https://gitlab.ilabt.imec.be/api/v4/projects/3941/packages/maven</url>
        </repository>
        <snapshotRepository>
            <id>gitlab-maven</id>
            <url>https://gitlab.ilabt.imec.be/api/v4/projects/3941/packages/maven</url>
        </snapshotRepository>
    </distributionManagement>

    <dependencies>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-stdlib</artifactId>
            <version>${kotlin.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.2.11</version>
        </dependency>
        <dependency>
            <groupId>io.github.microutils</groupId>
            <artifactId>kotlin-logging-jvm</artifactId>
            <version>2.1.23</version>
        </dependency>
        <dependency>
            <groupId>org.codejargon.feather</groupId>
            <artifactId>feather</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>io.reactivex.rxjava2</groupId>
            <artifactId>rxkotlin</artifactId>
            <version>2.4.0</version>
            <exclusions>
                <exclusion>
                    <groupId>io.reactivex.rxjava2</groupId>
                    <artifactId>rxjava</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>31.1-jre</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.module</groupId>
                <artifactId>jackson-module-kotlin</artifactId>
                <version>2.13.3</version>
            </dependency>
            <dependency>
                <groupId>com.github.davidmoten</groupId>
                <artifactId>rxjava2-extras</artifactId>
                <version>0.1.38</version>
                <exclusions>
                    <exclusion>
                        <groupId>io.reactivex.rxjava2</groupId>
                        <artifactId>rxjava</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>io.vertx</groupId>
                <artifactId>vertx-stack-depchain</artifactId>
                <version>${vertx.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.redisson</groupId>
                <artifactId>redisson</artifactId>
                <version>3.17.4</version>
            </dependency>
            <dependency>
                <groupId>com.github.davidmoten</groupId>
                <artifactId>geo</artifactId>
                <version>0.7.1</version>
            </dependency>
            <dependency>
                <groupId>com.github.akarnokd</groupId>
                <artifactId>rxjava2-jdk8-interop</artifactId>
                <version>0.3.7</version>
                <exclusions>
                    <exclusion>
                        <groupId>io.reactivex.rxjava2</groupId>
                        <artifactId>rxjava</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>com.github.ben-manes.caffeine</groupId>
                <artifactId>caffeine</artifactId>
                <version>2.8.1</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
        <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
        <plugins>
            <plugin>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-maven-plugin</artifactId>
                <version>${kotlin.version}</version>
                <executions>
                    <execution>
                        <id>compile</id>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>

                    <execution>
                        <id>test-compile</id>
                        <goals>
                            <goal>test-compile</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0-M6</version>
                    <configuration>
                        <argLine>
                            --add-opens java.base/java.lang=ALL-UNNAMED
                            --add-opens java.base/java.util=ALL-UNNAMED
                        </argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>com.ning.maven.plugins</groupId>
                    <artifactId>maven-dependency-versions-check-plugin</artifactId>
                    <version>2.0.2</version>
                </plugin>
                <plugin>
                    <groupId>com.google.cloud.tools</groupId>
                    <artifactId>jib-maven-plugin</artifactId>
                    <version>3.2.1</version>
                    <executions>
                        <execution>
                            <phase>deploy</phase>
                            <goals>
                                <goal>build</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <from>
                            <image>eclipse-temurin:17</image>
                        </from>
                        <to>
                            <image>${docker.registry}/${project.artifactId}:${project.version}</image>
                        </to>
                        <container>
                            <jvmFlags>
                                <jvmFlag>--enable-preview</jvmFlag>
                                <jvmFlag>-Djava.net.preferIPv4Addresses=true</jvmFlag>
                                <jvmFlag>-Djava.net.preferIPv4Stack=true</jvmFlag>
                                <jvmFlag>-Dlogback.configurationFile=/app/config/logback.xml</jvmFlag>
                                <jvmFlag>-Dlog4j2.formatMsgNoLookups=true</jvmFlag>
                            </jvmFlags>
                            <creationTime>USE_CURRENT_TIMESTAMP</creationTime>
                        </container>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
